# STM32L4-FlashLoader

./: .gitignore  CMakeLists.txt  FlashLoader.ioc  STM32L433CCTx_FLASH.ld
Core/Inc/: DevInf.h  FlashOS.h  main.h  quadspi.h  segger_loader.h  stldr_loader.h  stm32l4xx_hal_conf.h  w25qxx.h
Core/Src/: gpio.c  main.c  quadspi.c  segger_loader.c  stldr_loader.c  w25qxx.c
cmake/: common.cmake  gcc-arm-none-eabi.cmake
cmake/loader/: CMakeLists.txt
cmake/segger/: CMakeLists.txt  segger_linker.ld
cmake/stldr/: CMakeLists.txt  stldr_linker.ld
